--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.key filter=git-crypt diff=git-crypt
 *.tfstate filter=git-crypt diff=git-crypt
 terraform.tfvars filter=git-crypt diff=git-crypt
+*.pem filter=git-crypt diff=git-crypt
